# Proyecto2MarcoFabian

./: Armor.cpp  Armor.h  BowStrategy.cpp  BowStrategy.h  CMakeLists.txt  DamageStrategy.h  Dragon.h  Enemy.cpp  Enemy.h  Entity.h  Goblin.h  Knight.cpp  Knight.h  Logger.cpp  Logger.h  Mage.h  README.md  ReportGenerator.cpp  ReportGenerator.h  Room.cpp  Room.h  SimulationEngine.cpp  SimulationEngine.h  SpellStrategy.cpp  SpellStrategy.h  SwordStrategy.cpp  SwordStrategy.h  Villager.cpp  Villager.h  Weapon.cpp  Weapon.h  World.cpp  World.h  WorldLoader.cpp  WorldLoader.h  armaduras_aldeanos.txt  armas_aldeanos.txt  bitacora.txt  config.txt  entidades.txt  (+3 more)
data/: entidades.txt  mundo.txt
